--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -13,6 +13,12 @@
 
 </head>
 <body>
+  <nav>
+    <h1>Big Al's</h1>
+    <ul>
+      <li><a href="{{ url_for('index') }}">Home</a></li>
+    </ul>
+  </nav>
   {% block content %}{% endblock %}
 </body>
 </html>
