add nav link to artist index

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -17,6 +17,7 @@
     <h1>Big Al's</h1>
     <ul>
       <li><a href="{{ url_for('index') }}">Home</a></li>
+      <li><a href="{{ url_for('artists_index') }}">Artists</a></li>
     </ul>
   </nav>
   <hr />
