connect to database

--- a/app/templates/artists/index.html
+++ b/app/templates/artists/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <ul>
   {% for artist in artists %}
-  <li>{{ artist.name }}</li>
+  <li>{{ artist.id }} - {{ artist.name }}</li>
   {% endfor %}
 </ul>
 {% endblock %}
