add album list to show artist view

--- a/app/templates/artists/show.html
+++ b/app/templates/artists/show.html
@@ -3,4 +3,10 @@
 {% block content %}
 <h1>{{ artist.name }}</h1>
 <p>ID: {{ artist.id }}</p>
+<p>Albums:</p>
+<ul>
+  {% for album in artist.albums() %}
+    <li>{{ album.title }}</li>
+  {% endfor %}
+</ul>
 {% endblock %}
