add albums index link

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -18,6 +18,7 @@
     <ul>
       <li><a href="{{ url_for('index') }}">Home</a></li>
       <li><a href="{{ url_for('artists_index') }}">Artists</a></li>
+      <li><a href="{{ url_for('albums_index') }}">Albums</a></li>
     </ul>
   </nav>
   <hr />
