--- a/app/templates/albums/new.html
+++ b/app/templates/albums/new.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<form action="/albums/create" method="POST">
+<form action="/albums" method="POST">
   <label for="title">Title</label>
   <input type="text" name="title" id="title">
 
