--- a/app/templates/albums/edit.html
+++ b/app/templates/albums/edit.html
@@ -15,6 +15,9 @@
   {% endfor %}
   </select>
 
+  <label for="stock">Stock</label>
+  <input type="number" name="stock" id="stock" value="{{ album.stock }}">
+
   <input type="submit" value="Submit">
 </form>
 {% endblock %}
