--- a/app/templates/albums/index.html
+++ b/app/templates/albums/index.html
@@ -9,6 +9,7 @@
       <th>Artist</th>
       <th>Stock Quantity</th>
       <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -17,6 +18,7 @@
       <td><a href="/albums/{{ album.id }}">{{ album.title }}</a></td>
       <td><a href="/artists/{{ album.artist().id }}">{{ album.artist().name }}</a></td>
       <td class="stock-level--{{ album.stock_level() }}">{{ album.stock }}</td>
+      <td><a href="/albums/{{ album.id }}/edit">Edit</a></td>
       <td>
         <form action="/albums/{{ album.id }}/delete" method="POST">
           <input type="submit" value="Delete!">
